--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 
-<body>
+<h1>Hello World></h1>
+
+<h2> style="background-color: i am learning GIT and Github</h2>
+
 
 </body>
 
